--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -27,7 +27,6 @@
   background-color: #ffffff;
   transition: 0.4s all;
   width: 50vw;
-  height: 70vh;
   border-radius: 3px;
 }
 
@@ -57,6 +56,7 @@
   display: flex;
   flex-direction: column;
   margin: 10px 0;
+  width: 100%;
 }
 
 .modalInput label {
@@ -114,7 +114,6 @@
 @media (max-width: 700px) {
   .modalContent {
     width: 85vw;
-    height: 75vh;
   }
 }
 
