--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -78,6 +78,8 @@
   outline: 1px solid #e3e3e3;
   padding: 10px;
   border-radius: 3px;
+  background-color: #ffffff;
+  width: 100%;
   transition: all 0.2s;
 }
 
