--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -37,6 +37,10 @@
   border-bottom: 1px solid #e3e3e3;
 }
 
+.modalHeader button {
+  background: none;
+}
+
 .modalHeader img {
   width: 15px;
   object-fit: contain;
@@ -81,10 +85,6 @@
   background-color: #ffffff;
   width: 100%;
   transition: all 0.2s;
-}
-
-.modalInput input::before {
-  background-image: url("/public/images/down.png");
 }
 
 .modalActions {
