--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -94,6 +94,7 @@ main {
   transition: all 0.2s ease;
   position: relative;
   z-index: 5;
+  margin: 10px 0;
 }
 
 .avatar:hover {
@@ -187,12 +188,11 @@ main {
   transform: scale(0.9);
 }
 
-/* Responsive styles */
 .timeLeft {
   display: flex;
 }
 
-.timeLeft div {
+.timeLeft section {
   text-transform: uppercase;
   display: flex;
   flex-direction: column;
@@ -200,7 +200,12 @@ main {
   padding: 0 2vw;
 }
 
-@media (max-width: 550px) {
+.timeUnit {
+  font-weight: 800;    
+  font-size: x-large;
+}
+
+@media (width < 550px) {
   .timeLeft {
     flex-direction: column;
   }
@@ -223,7 +228,7 @@ main {
   }
 }
 
-@media (max-width: 1000px) {
+@media (width < 1000px) {
   main {
     flex-direction: column;
   }
